# Corluma

./: .clang-format  .gitignore  CHANGELOG.md  README.md
deploy/: CorDeployTool.py  README.md  deploy.py  deploy_all.py  deploy_app.py  deploy_corluma.py  deploy_docs.py  deploy_settings_example.json
docs/: CREDITS.md  CSS_Corluma.css  Doxyfile_Corluma  Layout_Corluma.xml  auto_format.sh  document.sh  footer_Corluma.html
html/: addnewgroupbutton_8h_source.html  annotated.html  appsettings_8h_source.html  arducordiscovery_8h_source.html  arducorinfowidget_8h_source.html  arducormetadata_8h_source.html  arducorpacketparser_8h_source.html  backend_overview.html  bridge_8h_source.html  bridgebutton_8h_source.html  bridgediscovery_8h_source.html  bridgegroupswidget_8h_source.html  bridgeinfowidget_8h_source.html  bridgescheduleswidget_8h_source.html  brightnessslider_8h_source.html  button_8h_source.html  category_doc_view_controller_07_08.html  checkbox_8h_source.html  chooseeditpage_8h_source.html  choosegroupwidget_8h_source.html  chooselightsgroupwidget_8h_source.html  choosemetadatawidget_8h_source.html  choosemoodgroupstateswidget_8h_source.html  choosemoodlightstateswidget_8h_source.html  choosemoodwidget_8h_source.html  choosestatewidget_8h_source.html  class_add_new_group_button-members.html  class_add_new_group_button.html  class_app_settings-members.html  class_app_settings.html  class_ardu_cor_discovery-members.html  class_ardu_cor_discovery.html  (+925 more)
test/: CMakeLists.txt  main.cpp  test_Dictionary.cpp  test_StrictDictionary.cpp
test/helpers/: mocklight.h
(+708 files in other folders)
